--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: release
 
-on: workflow_dispatch
+on: push
 
 jobs:
   release:
@@ -8,8 +8,18 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: setup-dotnet
+    - name: Setup
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x'
-    - run: dotnet build UnlimitedReroll -o bin --configuration Release
+    - name: Build
+      run: |
+        dotnet build UnlimitedReroll -o bin --configuration Release
+        echo ${{ github.sha }} > Release.txt
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          Release.txt
+          bin/UnlimitedReroll.dll
