minor: update github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,4 +30,4 @@ jobs:
           Release.txt
           bin/TheLastSpellMod/UnlimitedReroll.dll
           bin/TheLastSpellMod/MultipleGain.dll
-          bin/michangsheng/
+          bin/michangsheng/DropEveryThing.dll
