--- a/michangsheng/DropEveryThing/DropEveryThing.csproj
+++ b/michangsheng/DropEveryThing/DropEveryThing.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net46</TargetFramework>
     <AssemblyName>DropEveryThing</AssemblyName>
     <Description>My first plugin</Description>
     <Version>1.0.0</Version>
