minor: 实现战斗收益提升 Mod

--- a/michangsheng/BattleGains/BattleGains.csproj
+++ b/michangsheng/BattleGains/BattleGains.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
-    <AssemblyName>DropEveryThing</AssemblyName>
+    <AssemblyName>BattleGains</AssemblyName>
     <Description>My first plugin</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
