--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         dotnet build TheLastSpellMod/MultipleGain -o bin/TheLastSpellMod --configuration Release
         dotnet build michangsheng/BattleGains -o bin/michangsheng --configuration Release
         dotnet build michangsheng/WuDaoGains -o bin/michangsheng --configuration Release
+        dotnet build michangsheng/ShoterLearnTime -o bin/michangsheng --configuration Release
         dotnet build michangsheng/BetterShoppingExperience -o bin/michangsheng --configuration Release
         echo ${{ github.sha }} > Release.txt
         cat Release.txt
@@ -34,3 +35,5 @@ jobs:
           bin/TheLastSpellMod/MultipleGain.dll
           bin/michangsheng/BattleGains.dll
           bin/michangsheng/WuDaoGains.dll
+          bin/michangsheng/ShoterLearnTime.dll
+          bin/michangsheng/BetterShoppingExperience.dll
