feature: 实现瞬间炼丹炼器

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
         dotnet build michangsheng/WuDaoGains -o bin/michangsheng --configuration Release
         dotnet build michangsheng/ShoterLearnTime -o bin/michangsheng --configuration Release
         dotnet build michangsheng/BetterShoppingExperience -o bin/michangsheng --configuration Release
+        dotnet build michangsheng/InstantlyForgeAndRefine -o bin/michangsheng --configuration Release
         echo ${{ github.sha }} > Release.txt
         cat Release.txt
     - name: Release
