feature: 实现瞬间炼丹炼器

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,3 +38,4 @@ jobs:
           bin/michangsheng/WuDaoGains.dll
           bin/michangsheng/ShoterLearnTime.dll
           bin/michangsheng/BetterShoppingExperience.dll
+          bin/michangsheng/InstantlyForgeAndRefine.dll
