--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
         dotnet build michangsheng/ShoterLearnTime -o bin/michangsheng --configuration Release
         dotnet build michangsheng/BetterShoppingExperience -o bin/michangsheng --configuration Release
         dotnet build michangsheng/InstantlyForgeAndRefine -o bin/michangsheng --configuration Release
+        dotnet build michangsheng/CollectGains -o bin/michangsheng --configuration Release
         echo ${{ github.sha }} > Release.txt
         cat Release.txt
     - name: Release
