feature: 实现炼丹助手(自动生成丹方, 丹方排序, 展示丹方价值...

--- a/michangsheng/FriendlyLianDan/FriendlyLianDan.csproj
+++ b/michangsheng/FriendlyLianDan/FriendlyLianDan.csproj
@@ -20,8 +20,11 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>../lib/Assembly-CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp">
+    <Reference Include="Newtonsoft.Json">
       <HintPath>../lib/Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>../lib/UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
 
