add FriendlyLianDan.dll to release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,3 +44,4 @@ jobs:
           bin/michangsheng/InstantlyForgeAndRefine.dll
           bin/michangsheng/CollectGains.dll
           bin/michangsheng/ForgetWuDaoSkill.dll
+          bin/michangsheng/FriendlyLianDan.dll
