--- a/TheLastSpellMod/ForgetPerk/ForgetPerk.csproj
+++ b/TheLastSpellMod/ForgetPerk/ForgetPerk.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>MultipleGain</AssemblyName>
-    <Description>多倍收益</Description>
+    <AssemblyName>ForgetPerk</AssemblyName>
+    <Description>遗忘特性</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +19,27 @@
   <ItemGroup>
     <Reference Include="TheLastStand">
       <HintPath>../lib/TheLastStand.dll</HintPath>
+    </Reference>
+    <Reference Include="Framework">
+      <HintPath>../lib/Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="TPLib">
+      <HintPath>../lib/TPLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>../lib/Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+
+    <Reference Include="UnityEngine">
+      <HintPath>../lib/UnityEngine.dll</HintPath>
+    </Reference>
+
+    <Reference Include="UnityEngine.UI">
+      <HintPath>../lib/UnityEngine.UI.dll</HintPath>
+    </Reference>
+
+    <Reference Include="Sirenix.Serialization">
+      <HintPath>../lib/Sirenix.Serialization.dll</HintPath>
     </Reference>
   </ItemGroup>
   
