--- a/TheLastSpellMod/ForgetPerk/ForgetPerk.csproj
+++ b/TheLastSpellMod/ForgetPerk/ForgetPerk.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>ForgetPerk</AssemblyName>
-    <Description>遗忘特性</Description>
+    <Description>遗忘天赋</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
